////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.geography;

import com.telenav.aonia.map.geography.project.lexakai.diagrams.DiagramLocation;
import com.telenav.aonia.map.measurements.geographic.Heading;
import com.telenav.lexakai.annotations.UmlClassDiagram;

/**
 * A directional vector (a heading with no magnitude) at a particular location.
 *
 * @author jonathanl (shibo)
 */
@UmlClassDiagram(diagram = DiagramLocation.class)
public class LocatedHeading extends Location
{
    /** The direction */
    private final Heading heading;

    public LocatedHeading(final Location location, final Heading heading)
    {
        super(location.latitude(), location.longitude());
        this.heading = heading;
    }

    public Heading heading()
    {
        return heading;
    }
}
