////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.aonia.map.geography;

import com.telenav.aonia.map.geography.project.lexakai.diagrams.DiagramLocation;
import com.telenav.lexakai.annotations.UmlClassDiagram;

import java.util.List;

/**
 * A sequence of locations because it isn't reasonable or possible (due to Java erasures) to make some objects {@link
 * Iterable} of Location.
 */
@FunctionalInterface
@UmlClassDiagram(diagram = DiagramLocation.class)
public interface LocationSequence
{
    static LocationSequence of(final List<Location> locations)
    {
        return () -> locations;
    }

    Iterable<Location> locationSequence();
}
