@startuml

    !include ../lexakai/lexakai.theme
    
    title "Geographic Locations"
    
    interface Bounded
    interface Located
    interface Intersectable
    
    Angle <|-- Latitude
    class Latitude
    {
        --(constructors)--
        #Latitude()
        --
        +Distance distanceTo(Latitude that)
        +Latitude dm5(int latitudeInDm5)
        +Latitude dm6(int latitudeInDm6)
        +Latitude dm7(int latitudeInDm7)
        +double inRange(double degrees)
        +Latitude nanodegrees(long nanodegrees)
        --(angle)--
        +Latitude angle(Angle)
        +Latitude degrees(double degrees)
        +Latitude degreesInRange(double degrees)
        +Latitude degreesMinutesAndSeconds(int degrees, float minutes, float seconds)
        +Latitude microdegrees(int microdegrees)
        --(checks)--
        +boolean isValid(double latitude)
        --(conversion)--
        +int as(Precision)
        +Height asHeight()
        --(math)--
        +Latitude incremented()
        +Latitude maximum(Latitude that)
        +Latitude minimum(Latitude that)
    }
    
    interface LocationSequence
    LocationSequence <|-- Located
    interface Located
    {
        --
        +Location location()
    }
    
    Location <|-- LocatedHeading
    class LocatedHeading
    {
        --(constructors)--
        +LocatedHeading(Location, Heading)
        --(angle)--
        +Heading heading()
    }
    
    Located <|-- Location
    Bounded <|-- Location
    Intersectable <|-- Location
    Location --> Precision : "represented at"
    Location o-- Latitude
    Location o-- Longitude
    class Location
    {
        --(constructors)--
        +Location()
        +Location(Latitude, Longitude)
        +Location(Location)
        --
        +Distance distanceTo(Location that)
        +Distance distanceTo(Located that)
        +Location dm5(long location)
        +Location dm5(int latitudeInDm5, int longitudeInDm5)
        +Location dm6(int latitudeInDm6, int longitudeInDm6)
        +Location dm6(long location)
        +Location dm7(int latitudeInDm7, int longitudeInDm7)
        +Location dm7(long location)
        +Distance equirectangularDistanceTo(Location that)
        +Distance haversineDistanceTo(Location that)
        +int latitude(long latitudeAndLongitude)
        +Latitude latitude()
        +int latitudeInDm7()
        +Distance lawOfCosinesDistanceTo(Location that)
        +Longitude longitude()
        +int longitude(long latitudeAndLongitude)
        +int longitudeInDm7()
        +void main(String[] args)
        +Location offset(Latitude, Longitude)
        +Location offset(Width)
        +Location offset(Dimensioned sized)
        +Location offset(Height)
        +Offset offsetTo(Location)
        +Distance preciseDistanceTo(Location that)
        +Location quantize(Distance quantum)
        --(angle)--
        +Location degrees(double latitude, double longitude)
        +Heading headingTo(Location that)
        --(checks)--
        +boolean isClose(Location that, Distance)
        +boolean isClose(Location that, Angle tolerance)
        +boolean isOrigin()
        --(collection)--
        +com.telenav.aonia.map.geography.shape.rectangle.Rectangle rectangle(Dimensioned sized)
        +com.telenav.aonia.map.geography.shape.rectangle.Rectangle within(Distance)
        --(command line parsing)--
        +SwitchParser.Builder<Location> switchParser(String name, String description)
        --(conversion)--
        +Point asAwtPointInMicroDegrees()
        +long asDecimal(Precision)
        +long asDecimalLong(Precision)
        +long asDm5Long()
        +long asDm6Long()
        +long asDm7Long()
        +long asLong(Precision)
        +long asLong()
        +Segment to(Location to)
        +long toLong(int latitude, int longitude)
        --(distance)--
        +long equirectangularDistanceBetweenInMillimeters(long fromLatitudeInDm7, long fromLongitudeInDm7, long toLatitudeInDm7, long toLongitudeInDm7)
        +long equirectangularDistanceToInMillimeters(Location that)
        --(functional)--
        +Location decremented()
        +Location incremented()
        +Location moved(Heading, Distance offset)
        +Location scaledBy(double latitudeScale, double longitudeScale)
        +Location withLatitude(Latitude)
        +Location withLongitude(Longitude)
        --(math)--
        +Location minus(Latitude, Longitude)
        +Location minus(Height)
        +Location minus(Dimensioned sized)
        +Location minus(Width)
        --(primitive)--
        +Location fromLong(long locationInDm7)
    }
    
    interface LocationSequence
    {
        --
        +LocationSequence of(List<Location> locations)
        --(collection)--
        +Iterable<Location> locationSequence()
    }
    
    Angle <|-- Longitude
    class Longitude
    {
        --(constructors)--
        #Longitude()
        --
        +Distance distanceTo(Longitude that, Latitude)
        +Longitude dm5(int longitudeInDm5)
        +Longitude dm6(int longitudeInDm6)
        +Longitude dm7(int longitudeInDm7)
        +double inRange(double degrees)
        +Longitude nanodegrees(long nanodegrees)
        --(angle)--
        +Longitude angle(Angle)
        +Longitude degrees(double degrees)
        +Longitude degreesInRange(double degrees)
        +Longitude degreesMinutesAndSeconds(int degrees, float minutes, float seconds)
        +Longitude microdegrees(int microdegrees)
        --(checks)--
        +boolean isValid(double longitude)
        --(conversion)--
        +int as(Precision)
        +Width asWidth()
        --(math)--
        +Longitude incremented()
        +Longitude maximum(Longitude that)
        +Longitude minimum(Longitude that)
    }
    
    enum Precision
    {
        DM5
        DM6
        DM7
        NONE
    }
    
    Vector --> Location : "offsets"
    class Vector
    {
        --(constructors)--
        +Vector(Distance)
        +Vector(Heading, Distance)
        --
        +Location offset(Location that)
    }
    
@enduml

